objects/Contact.object
<CustomObject>
    <fields>
        <fullName>MailPreference__c</fullName>
        <description>Source: MARS na_load_rep.MailCode
Loaded by a nightly job. Data Flow: SF -&gt; Mars</description>
        <label>Mail Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALWAYS</fullName>
                    <default>true</default>
                    <label>ALWAYS</label>
                </value>
                <value>
                    <fullName>NEVER</fullName>
                </value>
                <value>
                    <fullName>ON REQUEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagedMoneyQuintile__c</fullName>
        <description>This tells us how much revenue production they do relative to their peers, Q1 being the best.</description>
        <inlineHelpText>This tells us how much revenue production they do relative to their peers, Q1 being the best.</inlineHelpText>
        <label>Managed Money Quintile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>Q5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarsRepId__c</fullName>
        <description>Source: MARS na_load_rep.Id
Loaded by a nightly job. Unique identifier for MARS. Data Flow: Mars -&gt; SF</description>
        <externalId>true</externalId>
        <label>MARS Rep Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MutualFundQuintile__c</fullName>
        <description>This tells us how much revenue production they do relative to their peers, Q1 being the best.</description>
        <inlineHelpText>This tells us how much revenue production they do relative to their peers, Q1 being the best.</inlineHelpText>
        <label>Mutual Fund Quintile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
                <value>
                    <fullName>Q5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MyCoverageWork__c</fullName>
        <description>This field should not be exposed to users.  It's necessary because CASE statements do not return booleans.  It is used by the My Coverage field, which turns the value in this field into a boolean.</description>
        <formula>CASE( $User.ActivityChannelName__c ,
"RCDU",If ( BEGINS($User.ActivityTerritoryZoneName__c, "IC") || BEGINS($User.ActivityTerritoryZoneName__c, "RD"), 
if (CONTAINS(ContactTerritories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ZonesCovered__c, ZoneRCDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRCDU__c)), 1, 0), 
if (CONTAINS(ContactTerritories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ActivityTerritoryZoneName__c, ZoneRCDU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRCDU__c)), 1, 0)),
"RADU",If ( BEGINS($User.ActivityTerritoryZoneName__c, "IC") || BEGINS($User.ActivityTerritoryZoneName__c, "RD"), 
if (CONTAINS(ContactTerritories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ZonesCovered__c, ZoneRADU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRADU__c)), 1, 0), 
if (CONTAINS(ContactTerritories__c, $User.ActivityTerritoryName__c) &amp;&amp; CONTAINS($User.ActivityTerritoryZoneName__c, ZoneRADU__r.Name ) &amp;&amp; NOT(ISBLANK(ZoneRADU__c)), 1, 0)),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Coverage Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MyCoverage__c</fullName>
        <description>TRUE of the contact is covered by the user who is logged in, FALSE if the contact is not.</description>
        <formula>If ( MyCoverageWork__c = 1 ,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked, this contact is covered by you or one of the external sales people you cover.</inlineHelpText>
        <label>My Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NatixisAUM__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis AUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPPYNetSales__c</fullName>
        <label>Natixis PPY Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPPYPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PPY Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPPYRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PPY Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPYNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PY Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPYPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PY Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisPYRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis PY Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisR12MNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis R12M Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisR12MPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis R12M Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisR12MRedemption__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis R12M Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisSegmentation__c</fullName>
        <description>Requested by Brian O'Mara and Caitlin Bryson to assist in segmenting contacts, primarily for marketing.</description>
        <label>Natixis Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Top 200</fullName>
                </value>
                <value>
                    <fullName>Digital Wholesaling</fullName>
                </value>
                <value>
                    <fullName>Digital Marketing</fullName>
                    <default>true</default>
                    <label>Digital Marketing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NatixisSubsegmentation__c</fullName>
        <label>Natixis Subsegmentation</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>NatixisSegmentation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Investment Only</fullName>
                </value>
                <value>
                    <fullName>PRCG Prospect</fullName>
                </value>
                <value>
                    <fullName>PRCG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NatixisYTDNetSales__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis YTD Net Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisYTDPurchases__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis YTD Purchases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NatixisYTDRedemptions__c</fullName>
        <description>Integrated from EDW</description>
        <label>Natixis YTD Redemptions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <description>Mars Integration field. Data Flow: Mars -&gt; SF. Profile field for Sales users to update with a Contact's preferred name.</description>
        <label>Nickname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotZoned__c</fullName>
        <description>N/A No longer used.</description>
        <formula>ISBLANK( ZoneADU_IDU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Zoned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofCallsMeetingsCurQ__c</fullName>
        <description>This number is populated by this DLRS : https://globalplatform.my.salesforce.com/a0mF000000Agn0j (Type__c like 'Call%' or Type__c like 'Meeting%') and (Date__c=THIS_QUARTER and Status__c='Completed)  </description>
        <label>QTD Number of Calls/Meetings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofContacts__c</fullName>
        <description>'Power of One' Formula field used in reports to count records</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLDCompetitorFundFamilyFund__c</fullName>
        <description>sal-13</description>
        <label>OLDCompetitor Fund Family - Fund</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BlackRock</fullName>
                </value>
                <value>
                    <fullName>BlackRock Global Allocation</fullName>
                </value>
                <value>
                    <fullName>First Eagle</fullName>
                </value>
                <value>
                    <fullName>First Eagle Global</fullName>
                </value>
                <value>
                    <fullName>Goldman Sachs</fullName>
                </value>
                <value>
                    <fullName>Goldman Sachs Strategic Income</fullName>
                </value>
                <value>
                    <fullName>Henderson</fullName>
                </value>
                <value>
                    <fullName>Henderson International</fullName>
                </value>
                <value>
                    <fullName>Hybridge</fullName>
                </value>
                <value>
                    <fullName>Hybridge Market Neutral</fullName>
                </value>
                <value>
                    <fullName>Ivy</fullName>
                </value>
                <value>
                    <fullName>Ivy Asset Strategy</fullName>
                </value>
                <value>
                    <fullName>JP Morgan</fullName>
                </value>
                <value>
                    <fullName>JP Morgan Strategic Income</fullName>
                </value>
                <value>
                    <fullName>John Hancock</fullName>
                </value>
                <value>
                    <fullName>John Hancock Strategic Income</fullName>
                </value>
                <value>
                    <fullName>Pimco</fullName>
                </value>
                <value>
                    <fullName>Pimco TR</fullName>
                </value>
                <value>
                    <fullName>Templeton</fullName>
                </value>
                <value>
                    <fullName>Templeton Global Bond</fullName>
                </value>
                <value>
                    <fullName>Thornburg</fullName>
                </value>
                <value>
                    <fullName>Thornburg International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLDDoesRetirement__c</fullName>
        <description>sal-13</description>
        <label>OLDDoesRetirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OLDScreeningProcess__c</fullName>
        <description>sal-13</description>
        <label>OLDScreening Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Firm Research</fullName>
                </value>
                <value>
                    <fullName>Lipper</fullName>
                </value>
                <value>
                    <fullName>Morningstar</fullName>
                </value>
                <value>
                    <fullName>Self Screening</fullName>
                </value>
                <value>
                    <fullName>Dorsey Wright</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfficeTopContact__c</fullName>
        <description>Integrated from EDW</description>
        <label>Office Top Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OngoingCPEReviews__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Full Service project. To track who opts in for on going CPE’s because some Clients may not</description>
        <inlineHelpText>Checked indicates the client has committed to ongoing CPE reviews. The baseline commitment is two reviews per year, however it is up to the sales team and PRCG Consultant to determine frequency.  Requests for CPE reviews are made through Artemus.</inlineHelpText>
        <label>Ongoing CPE Reviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OtherEmail__c</fullName>
        <description>SAL-12 requirement</description>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>OverlapExternalUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Integrated with Pardot to display the sales user's name associated to the DCIO/DC Channel on the record.</description>
        <label>Overlap Sales User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OverlapExternalUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverlapHybridUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>N/A Originally mapped to Aprimo to track the name of the Retirement hybrid Sales user.</description>
        <label>Overlap Hybrid User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OverlapHybridUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverlapInternalUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>N/A Originally mapped to Aprimo to track the name of the Retirement internal Sales user.</description>
        <label>Overlap Internal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OverlapInternalUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OverlapMarketingEmail__c</fullName>
        <description>Pardot Personalization. Overlap External User's Email.</description>
        <formula>OverlapExternalUser__r.Email</formula>
        <label>Overlap Sales Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlapMarketingFirstName__c</fullName>
        <description>Pardot Personalization. Overlap External User's First Name.</description>
        <formula>OverlapExternalUser__r.FirstName</formula>
        <label>Overlap Sales First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlapMarketingLastName__c</fullName>
        <description>Pardot Personalization. Overlap External User's Last Name.</description>
        <formula>OverlapExternalUser__r.LastName</formula>
        <label>Overlap Sales Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlapMarketingPhone__c</fullName>
        <description>Pardot Personalization. Overlap External User's Phone.</description>
        <formula>OverlapExternalUser__r.Phone</formula>
        <label>Overlap Sales Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverlapTerritory__c</fullName>
        <description>Populated by a nightly job based on the RADU Contact territories. Mapped to Pardot to segment RADU.</description>
        <label>Overlap Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used by process builders</description>
        <label>PB Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRCGFullService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To track clients that are part of the up-and-coming 'Premier Service' for PRCG</description>
        <label>Full Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRCGProcessStatus__c</fullName>
        <description>Requested to be removed from the UI on 6/22/17 by Joe Klimas.
This Status is built based on the LastPRCGCaseCompletedDate__c and LastPRCGOpenCaseDate__c dates</description>
        <formula>IF(
AND(isnull(LastPRCGCaseCompletedDate__c), isnull(LastPRCGOpenCaseDate__c)),
'',

IF(
AND(isnull(LastPRCGCaseCompletedDate__c), !isnull(LastPRCGOpenCaseDate__c)),
'PRCG Client',

IF(
AND(!isnull(LastPRCGCaseCompletedDate__c), isnull(LastPRCGOpenCaseDate__c)),
'PRCG Completed',

IF(
LastPRCGCaseCompletedDate__c &lt;= LastPRCGOpenCaseDate__c,
'PRCG Client',

IF(
LastPRCGCaseCompletedDate__c &gt; LastPRCGOpenCaseDate__c,
'PRCG Completed',


''

)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Status is auto populated based on the Last PRCG Completed Dates.</inlineHelpText>
        <label>ZPRCG Process Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRCGServiceInitiationDate__c</fullName>
        <description>This is the InitiationDate associated with Full Service</description>
        <label>Service Initiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRCGServiceRenewalDate__c</fullName>
        <description>RenewalDate associated with PRCG Full Service</description>
        <label>Service Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROAffiliateofInterest__c</fullName>
        <description>Profile field to track Affiliate of Interest. Requested by IDU.</description>
        <label>Affiliate</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolute Asia Asset Management</fullName>
                </value>
                <value>
                    <fullName>Active Investment Advisors</fullName>
                </value>
                <value>
                    <fullName>AEW</fullName>
                </value>
                <value>
                    <fullName>AIA</fullName>
                </value>
                <value>
                    <fullName>Alphasimplex Group</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Aurora Investment Advisors</fullName>
                </value>
                <value>
                    <fullName>Capital Growth Management</fullName>
                </value>
                <value>
                    <fullName>Caspian</fullName>
                </value>
                <value>
                    <fullName>Caspian Capital Management</fullName>
                </value>
                <value>
                    <fullName>Caspian Private Equity</fullName>
                </value>
                <value>
                    <fullName>Darius Capital Partners</fullName>
                </value>
                <value>
                    <fullName>Gateway</fullName>
                </value>
                <value>
                    <fullName>Gateway Investment Advisors</fullName>
                </value>
                <value>
                    <fullName>H2O</fullName>
                </value>
                <value>
                    <fullName>Hansberger Global Investors</fullName>
                </value>
                <value>
                    <fullName>Harris Associates</fullName>
                </value>
                <value>
                    <fullName>Loomis Sayles</fullName>
                </value>
                <value>
                    <fullName>Loomis Sayles &amp; Company</fullName>
                </value>
                <value>
                    <fullName>Managed Portfolio Advisors</fullName>
                </value>
                <value>
                    <fullName>McDonnell</fullName>
                </value>
                <value>
                    <fullName>Mirova</fullName>
                </value>
                <value>
                    <fullName>MPA</fullName>
                </value>
                <value>
                    <fullName>Natixis Asset Management</fullName>
                </value>
                <value>
                    <fullName>Natixis Multi Manager</fullName>
                </value>
                <value>
                    <fullName>Oakmark</fullName>
                </value>
                <value>
                    <fullName>Ossiam</fullName>
                </value>
                <value>
                    <fullName>Reich &amp; Tang Asset Management</fullName>
                </value>
                <value>
                    <fullName>Seeyond</fullName>
                </value>
                <value>
                    <fullName>Snyder Capital Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PROAssetClassofInterest__c</fullName>
        <description>Previously Labeled 'Asset Class of Interest'</description>
        <label>Vehicle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ALTERNATIVE</fullName>
                </value>
                <value>
                    <fullName>BALANCED</fullName>
                </value>
                <value>
                    <fullName>Co-mingled</fullName>
                </value>
                <value>
                    <fullName>C SHARES</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>ETF</fullName>
                </value>
                <value>
                    <fullName>EQUITY</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>EQUITY-FIXED INCOME-MONEY MKT</fullName>
                </value>
                <value>
                    <fullName>EQUITY-MONEY MKT</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-MONEY MARKET</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-MUNICIPAL</fullName>
                </value>
                <value>
                    <fullName>FIXED INCOME-TAXABLE</fullName>
                </value>
                <value>
                    <fullName>Founders Share</fullName>
                </value>
                <value>
                    <fullName>LOANS</fullName>
                </value>
                <value>
                    <fullName>MONEY MARKET-CASH</fullName>
                </value>
                <value>
                    <fullName>Mutual Fund</fullName>
                </value>
                <value>
                    <fullName>OFFSHORE</fullName>
                </value>
                <value>
                    <fullName>Private Debt</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Private Markets</fullName>
                </value>
                <value>
                    <fullName>SMA</fullName>
                </value>
                <value>
                    <fullName>Sub-Advised</fullName>
                </value>
                <value>
                    <fullName>Y-Shares</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRODesignationsClubLevelsRole__c</fullName>
        <description>Sourced by the Client Solutions Group.</description>
        <label>Designations/Club Levels Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leader</fullName>
                </value>
                <value>
                    <fullName>Level - 1</fullName>
                </value>
                <value>
                    <fullName>Level - 2</fullName>
                </value>
                <value>
                    <fullName>Level - 3-4</fullName>
                </value>
                <value>
                    <fullName>Level - 5-7</fullName>
                </value>
                <value>
                    <fullName>New Coach</fullName>
                </value>
                <value>
                    <fullName>Performance Leader</fullName>
                </value>
                <value>
                    <fullName>Recuriting Leader</fullName>
                </value>
                <value>
                    <fullName>Trainer Leader</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRODesignationsClubLevels__c</fullName>
        <description>Sourced by the Client Solutions Group.</description>
        <inlineHelpText>Firm specific Club-Level data sourced by the Client Solutions Group. The club level years are indicated in (), for example 2015 appears as (15).</inlineHelpText>
        <label>Designations/Club Levels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAG</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>AXA Gold (12)</fullName>
                </value>
                <value>
                    <fullName>AXA Gold (14)</fullName>
                </value>
                <value>
                    <fullName>AXA Gold (15)</fullName>
                </value>
                <value>
                    <fullName>AXA Gold (16)</fullName>
                </value>
                <value>
                    <fullName>Cetera Top 250 MF Q1 (13)</fullName>
                </value>
                <value>
                    <fullName>Cetera Top 250 MF Q2 (14)</fullName>
                </value>
                <value>
                    <fullName>CFN Level 1 (12)</fullName>
                </value>
                <value>
                    <fullName>CFN Level 2 (12)</fullName>
                </value>
                <value>
                    <fullName>CFN Level 3 (12)</fullName>
                </value>
                <value>
                    <fullName>EDJ Levels 1-2 (13)</fullName>
                </value>
                <value>
                    <fullName>EDJ Levels 3-4 (13)</fullName>
                </value>
                <value>
                    <fullName>EDJ Levels 5-6-7 (13)</fullName>
                </value>
                <value>
                    <fullName>EDJ Levels 8-9-10 (13)</fullName>
                </value>
                <value>
                    <fullName>EDJ New (13)</fullName>
                </value>
                <value>
                    <fullName>LPL Chairmans Club (12)</fullName>
                </value>
                <value>
                    <fullName>LPL Chairmans Council (12)</fullName>
                </value>
                <value>
                    <fullName>LPL Executive Council (12)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Chairmans Club (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Chairmans Council (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Directors Club (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Executive Council (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Freedom Club (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Patriots Club (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Registered Rep (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IAS-Registered Staff (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IS-Chairmans Club (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IS-Chairmans Council (14)</fullName>
                </value>
                <value>
                    <fullName>LPL IS-Directors Club (14)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>